# phivolcs_etl_backend

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cron_scraper.py  docker-compose.yml  main.py  pyproject.toml
database/: README.md  earthquake_database.py  models.py  quick_demo.sql  sample_data.sql  schema.sql
diagram_flow/: program_flow.drawio  system.rnote
scraper/: scrape_hist_20_25.py
static/js/: earthquake-map.js
templates/: admin.html  index.html
